--- a/index.html
+++ b/index.html
@@ -33,19 +33,7 @@
                     bảng</a></li>
             <li><i class="fa-solid fa-headphones-simple"></i>Phụ kiện
                 <ul class="submenu">
-                    <li class="category"><a href="danhmuc.html?category=Phụ kiện máy tính">Phụ kiện máy tính</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại chuột"><img
-                                src="san_pham/chuot_head.png">Chuột có dây/Chuột Bluetooth</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Tai nghe"><img
-                                src="san_pham/tainghe_head.png">Tai nghe</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Micro"><img
-                                src="san_pham/micro_head.png">Micro</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại balo"><img
-                                src="san_pham/balo_head.png">Balo/Túi chống sốc</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Cáp sạc máy tính"><img
-                                src="san_pham/office_head.png">Cáp sạc máy tính</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Phụ kiện máy tính"><img
-                                src="san_pham/pkmt_head.png">Xem tất cả...</a></li>
+
                     <li class="category"><a href="danhmuc.html?category=Phụ kiện điện thoại">Phụ kiện điện thoại</a>
                     </li>
                     <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Pin dự phòng"><img
@@ -65,6 +53,19 @@
                                 src="san_pham/loamt_head.png">Loa cho máy tính để bàn</a></li>
                     <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa"><img
                                 src="tai_nguyen/logoweb.png">Xem tất cả...</a></li>
+                    <li class="category"><a href="danhmuc.html?category=Phụ kiện máy tính">Phụ kiện máy tính</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại chuột"><img
+                                src="san_pham/chuot_head.png">Chuột có dây/Chuột Bluetooth</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Tai nghe"><img
+                                src="san_pham/tainghe_head.png">Tai nghe</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Micro"><img
+                                src="san_pham/micro_head.png">Micro</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại balo"><img
+                                src="san_pham/balo_head.png">Balo/Túi chống sốc</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Cáp sạc máy tính"><img
+                                src="san_pham/office_head.png">Cáp sạc máy tính</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Phụ kiện máy tính"><img
+                                src="san_pham/pkmt_head.png">Xem tất cả...</a></li>
                     <li class="category"><a href="danhmuc.html?category=PHỤ KIỆN">CÁC PHỤ KIỆN KHÁC</a>
                     </li>
                 </ul>
@@ -160,91 +161,91 @@
                 </div>
                 <div class="slide_sanpham_sale_content_items_contain">
                     <div class="slide_sanpham_sale_content_items">
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/iphone13.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>iPhone 13 128GB</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>
-                                            22.000.000</span><sup>đ</sup><span>-30%</span></li>
+                        <div class="slide_sanpham_sale_content_item" data-id="246">
 
-                                    <li>16.900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                            <img src="img_san_pham/ip14plus/1.png" alt="iPhone 14 Plus 128GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone 14 Plus 128GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>
+                                        17.000.000</span><sup>đ</sup><span>-24%</span></li>
+
+                                <li>12.980.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/iphone14.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>iPhone 14 128GB</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>25.000.000</span><sup>đ</sup><span>-20%</span></li>
-                                    <li>19.900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                        <div class="slide_sanpham_sale_content_item" data-id="244">
+
+                            <img src="img_san_pham/ip14promax/1.png" alt="iPhone 14 Pro Max 256GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone 14 Pro Max 256GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>23.000.000</span><sup>đ</sup><span>-17%</span></li>
+                                <li>18.980.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/iphone14tim.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>iPhone 14 128GB Tím</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>25.000.000</span><sup>đ</sup><span>-25%</span></li>
-                                    <li>19.900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                        <div class="slide_sanpham_sale_content_item" data-id="162">
+
+                            <img src="img_san_pham/ip8/1.png" alt="iPhone 8 64GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone 8 64GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>3.100.000</span><sup>đ</sup><span>-17%</span></li>
+                                <li>2.580.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/iphone15.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>iPhone 15 128GB Hồng</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>29.000.000</span><sup>đ</sup><span>-20%</span></li>
-                                    <li>22.900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                        <div class="slide_sanpham_sale_content_item" data-id="165">
+
+                            <img src="img_san_pham/ip8plus/1.png" alt="iPhone 8 Plus 64GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone 8 Plus 64GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>3.220.000</span><sup>đ</sup><span>-16%</span></li>
+                                <li>2.700.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/oppoa58.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>Oppo A58</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>12.000.000</span><sup>đ</sup><span>-25%</span></li>
-                                    <li>8.900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                        <div class="slide_sanpham_sale_content_item" data-id="173">
+
+                            <img src="img_san_pham/ipxs/1.png" alt="iPhone XS 64GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone XS 64GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>4.200.000</span><sup>đ</sup><span>-12%</span></li>
+                                <li>3.680.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
-                        <div class="slide_sanpham_sale_content_item">
-                            <a href="sanpham.html">
-                                <img src="san_pham/sale/samsungfit3.jpg" alt="iPhone 13">
-                                <div class="slide_sanpham_sale_content_item_info">
-                                    <li><img src="san_pham/sale/sticker.png"></li>
-                                    <li>SamSung Galaxy Fit 3</li>
-                                    <li>Giảm giá cực sốc</li>
-                                    <li><span>2.000.000</span><sup>đ</sup><span>-55%</span></li>
-                                    <li>900.000<sup>đ</sup></li>
-                                    <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
-                                    <li><i class="fa-solid fa-star"></i>5</li>
-                                </div>
-                            </a>
+                        <div class="slide_sanpham_sale_content_item" data-id="176">
+
+                            <img src="img_san_pham/ipxr/1.png" alt="iPhone Xr 64GB">
+                            <div class="slide_sanpham_sale_content_item_info">
+                                <li><img src="san_pham/sale/sticker.png"></li>
+                                <li>iPhone Xr 64GB</li>
+                                <li>Giảm giá cực sốc</li>
+                                <li><span>5.400.000</span><sup>đ</sup><span>-10%</span></li>
+                                <li>4.880.000<sup>đ</sup></li>
+                                <li>Quà tặng trị giá 2.000.000<sup>đ</sup></li>
+                                <li><i class="fa-solid fa-star"></i>5</li>
+                            </div>
+
                         </div>
 
                     </div>
