--- a/sanpham.html
+++ b/sanpham.html
@@ -33,19 +33,7 @@
                     bảng</a></li>
             <li><i class="fa-solid fa-headphones-simple"></i>Phụ kiện
                 <ul class="submenu">
-                    <li class="category"><a href="danhmuc.html?category=Phụ kiện máy tính">Phụ kiện máy tính</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại chuột"><img
-                                src="san_pham/chuot_head.png">Chuột có dây/Chuột Bluetooth</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Tai nghe"><img
-                                src="san_pham/tainghe_head.png">Tai nghe</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Micro"><img
-                                src="san_pham/micro_head.png">Micro</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại balo"><img
-                                src="san_pham/balo_head.png">Balo/Túi chống sốc</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Cáp sạc máy tính"><img
-                                src="san_pham/office_head.png">Cáp sạc máy tính</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Phụ kiện máy tính"><img
-                                src="san_pham/pkmt_head.png">Xem tất cả...</a></li>
+
                     <li class="category"><a href="danhmuc.html?category=Phụ kiện điện thoại">Phụ kiện điện thoại</a>
                     </li>
                     <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Pin dự phòng"><img
@@ -65,6 +53,19 @@
                                 src="san_pham/loamt_head.png">Loa cho máy tính để bàn</a></li>
                     <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa"><img
                                 src="tai_nguyen/logoweb.png">Xem tất cả...</a></li>
+                    <li class="category"><a href="danhmuc.html?category=Phụ kiện máy tính">Phụ kiện máy tính</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại chuột"><img
+                                src="san_pham/chuot_head.png">Chuột có dây/Chuột Bluetooth</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Tai nghe"><img
+                                src="san_pham/tainghe_head.png">Tai nghe</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Micro"><img
+                                src="san_pham/micro_head.png">Micro</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Các loại balo"><img
+                                src="san_pham/balo_head.png">Balo/Túi chống sốc</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Cáp sạc máy tính"><img
+                                src="san_pham/office_head.png">Cáp sạc máy tính</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Phụ kiện máy tính"><img
+                                src="san_pham/pkmt_head.png">Xem tất cả...</a></li>
                     <li class="category"><a href="danhmuc.html?category=PHỤ KIỆN">CÁC PHỤ KIỆN KHÁC</a>
                     </li>
                 </ul>
@@ -165,12 +166,12 @@
         <div class="container">
             <div class="product_content_left_small_img">
                 <div class="product_content_left_small_img_content" id="product_list_small">
-                    <img src="img_san_pham/iphone13/0.jpg" alt="iPhone 13 128GB">
-                    <img src="img_san_pham/iphone13/1.jpg" alt="iPhone 13 128GB">
-                    <img src="img_san_pham/iphone13/2.jpg" alt="iPhone 13 128GB">
-                    <img src="img_san_pham/iphone13/3.jpg" alt="iPhone 13 128GB">
-                    <img src="img_san_pham/iphone13/4.jpg" alt="iPhone 13 128GB">
-                    <img src="img_san_pham/iphone13/5.jpg" alt="iPhone 13 128GB">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
+                    <img src="tai_nguyen/logoweb.png" alt="Hình ảnh sản phẩm">
                 </div>
                 <div class="product_content_left_small_img_btn">
                     <i class="fa-solid fa-chevron-left btn_sanpham_left"></i>
